# YeetMouse

./: .gitignore  Makefile  README.org
driver/: accel.c  accel_modes.c  accel_modes.h  config.sample.h  defaults.h  driver.c
gui/: ConfigHelper.cpp  DriverHelper.cpp  DriverHelper.h  FunctionHelper.cpp  FunctionHelper.h  main.cpp
nix/: log.txt  module.nix  package.nix
pkg/: PKGBUILD.template  yeetmouse-driver-dkms.install
tests/: CMakeLists.txt  TestManager.cpp  Tests.cpp
